# faac

./: meson.build
libfaac/: cpu_compute.c  cpu_compute.h  meson.build  quantize.c  quantize.h  quantize_avx2.c  quantize_avx512.c
